--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medilab</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-   
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  
+ 
+
+   <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
