--- a/index.html
+++ b/index.html
@@ -1,57 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medilab</title>
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-   
-  <!-- navbar -->
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Medilab</title>
+    <script
+      src="https://kit.fontawesome.com/8f1c7aa363.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <!-- navbar -->
+
     <div class="container-fluid d-flex navbar">
       <a class="navbar-brand" href="#">Medilab</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#" id="nav-home">home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="nav-hover">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"  id="nav-hover">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"  id="nav-hover">Departments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"  id="nav-hover">Doctors</a>
-          </li>
-          <li class="nav-item dropdown border-0">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"  id="nav-hover">
-              Drop Down
-            </a>
-            <ul class="dropdown-menu border-0 ">
-              <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
-              <li><a class="dropdown-item" href="#">Drop Down 2</a></li>
-              <li><a class="dropdown-item" href="#">Drop Down 3</a></li>
-              <li><a class="dropdown-item" href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"  id="nav-hover">Contact</a>
-          </li>
-          <button class="btn rounded-pill px-4" id="menu-button">Make an Appointment</button>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#" id="nav-home"
+            >home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="nav-hover">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="nav-hover">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="nav-hover">Departments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="nav-hover">Doctors</a>
+        </li>
+        <li class="nav-item dropdown border-0">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            id="nav-hover"
+          >
+            Drop Down
+          </a>
+          <ul class="dropdown-menu border-0">
+            <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
+            <li><a class="dropdown-item" href="#">Drop Down 2</a></li>
+            <li><a class="dropdown-item" href="#">Drop Down 3</a></li>
+            <li><a class="dropdown-item" href="#">Drop Down 4</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="nav-hover">Contact</a>
+        </li>
+        <button class="btn rounded-pill px-4" id="menu-button">
+          Make an Appointment
+        </button>
       </ul>
     </div>
-  
+    <!-- home page -->
+    <!-- home -->
+    <div class="container-fluid mb-5" id="welcome">
+      <h1>WELCOME TO MEDILAB</h1>
+      <span>
+        We are team of talented designers making websites with Bootstrap</span
+      >
+      <br />
+      <button class="btn rounded-pill mb-5">GET STARTED</button>
+    </div>
 
-  <script src="assets/js/bootstrap.bundle.min.js"></script>
-</body>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-lg-4 col-lg-sm-12">
+          <div class="card">
+            <div class="card-body" id="Choose">
+              <h1>Why Choose Medilab?</h1>
+              <span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis
+                aute irure dolor in reprehenderit Asperioress dolores sedsdfr
+                etsafd. Tenetuasdr quia eos.<br />
+                Autem tempore quisdbusda vel necessitatibus optio ad
+                corporis.</span
+              >
+              <br />
+              <button class="btn rounded-pill">
+                Learn More
+                <i class="fa-solid fa-chevron-right" style="color: #ffffff"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 col-lg-sm-12" id="three-card-padding">
+          <div class="row">
+            <div class="col-lg-4 col-lg-sm-12 mb-md-4">
+              <div class="card border-0">
+                <div class="card-body" id="three-card">
+                  <i>
+                    class="fa-regular fa-pen-to-square fa-2xl" style="color:
+                    #1977cc; font-size: 42px"
+                  </i>
+                  <h3 class="card-title">Corporis voluptates sit</h3>
+                  <span class="card-text">
+                    Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut
+                    maiores omnis facere</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-lg-sm-12 mb-md-4">
+              <div class="card border-0">
+                <div class="card-body" id="three-card">
+                  <i>
+                    class="fa-brands fa-angellist fa-2xl" style="color: #1977cc;
+                    font-size: 42px"
+                  </i>
+                  <h3 class="card-title">Ullamco laboris ladore pan</h3>
+                  <span class="card-text"
+                    >Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-lg-sm-12">
+              <div class="card border-0">
+                <div class="card-body" id="three-card">
+                  <i>
+                    class="fa-regular fa-pen-to-square fa-2xl" style="color:
+                    #1977cc; font-size: 42px"
+                  </i>
+                  <h3 class="card-title">Corporis voluptates sit</h3>
+                  <span class="card-text">
+                    Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut
+                    maiores omnis facere</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- video -->
+
+    <div class="container mt-5" id="videopart">
+      <div class="row">
+        <div class="col-lg-5">
+          <iframe src="https://www.youtube.com/watch?v=fDD_rD032Lc"></iframe>
+        </div>
+        <div class="col-lg-7 fs-" id="">
+          <h1>Enim quis est voluptatibus aliquid consequatur fugiat</h1>
+          <span>
+            Esse voluptas cumque vel exercitationem. Reiciendis est hic
+            accusamus. Non ipsam et sed minima temporibus laudantium. Soluta
+            voluptate sed facere corporis dolores excepturi. Libero laboriosam
+            sint et id nulla tenetur. Suscipit aut voluptate.</span
+          >
+          <div class="row mt-4">
+            <div class="col-lg-1" id="circle">
+              <i class="fa-regular fa-star fa-2xl star-icon"></i>
+            </div>
+            <div class="col-lg-11 col-lg-md-6 col-lg-sm-12">
+              <h1>Lorem Lipsum</h1>
+              <span>
+                Voluptatum deleniti atque corrupti quos dolores et quas
+                molestias excepturi sint occaecati cupiditate non provident
+              </span>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-lg-1" id="circle">
+              <i class="fa-regular fa-star fa-2xl star-icon"></i>
+            </div>
+            <div class="col-lg-11">
+              <h1>Nemo Enim</h1>
+              <span>
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum deleniti atque
+              </span>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-lg-1" id="circle">
+              <i class="fa-regular fa-star fa-2xl star-icon"></i>
+            </div>
+            <div class="col-lg-11">
+              <h1>Dine Pad</h1>
+              <span>
+                Explicabo est voluptatum asperiores consequatur magnam. Et
+                veritatis odit. Sunt aut deserunt minus aut eligendi omnis
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
