added abput pag3e linlo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             >home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-hover">About</a>
+          <a class="nav-link" href="about.html" id="nav-hover">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" id="nav-hover">Services</a>
