--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medilab</title>
-    <scriptsrc="https://kit.fontawesome.com/8f1c7aa363.js"  crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/8f1c7aa363.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -13,7 +16,8 @@
 
     <div class="container-fluid d-flex navbar">
       <a class="navbar-brand" href="#">Medilab</a>
-      <button class="navbar-toggler"
+      <button
+        class="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#navbarTogglerDemo02"
@@ -26,8 +30,13 @@
 
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html" id="nav-home"
-            >home</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="index.html"
+            id="nav-home"
+            >home</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html" id="nav-hover">About</a>
@@ -67,8 +76,8 @@
         </button>
       </ul>
     </div>
-  <!-- home -->
-    <div class="container-fluid mb-5" id="welcome">
+    <!-- home -->
+    <div class="container my-5" id="welcome">
       <h1>WELCOME TO MEDILAB</h1>
       <span>
         We are team of talented designers making websites with Bootstrap</span
@@ -78,8 +87,8 @@
     </div>
 
     <div class="container my-5">
-      <div class="row">
-        <div class="col-lg-4 col-lg-sm-12">
+      <div class="row my-5">
+        <div class="col-lg-4 col-sm-12 col-md-12">
           <div class="card">
             <div class="card-body" id="Choose">
               <h1>Why Choose Medilab?</h1>
@@ -99,14 +108,17 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 col-lg-sm-12" id="three-card-padding">
+        <div
+          class="col-lg-8 col-sm-12 col-md-12 d-flex align-items-center my-5"
+        >
           <div class="row">
-            <div class="col-lg-4 col-lg-sm-12 mb-md-4">
+            <div class="col-lg-4 col-sm-12 col-md-6 my-3">
               <div class="card border-0">
                 <div class="card-body" id="three-card">
                   <i
-                    class="fa-regular fa-pen-to-square fa-2xl" style="color:
-                    #1977cc; font-size: 42px">
+                    class="fa-regular fa-pen-to-square fa-2xl"
+                    style="color: #1977cc; font-size: 42px"
+                  >
                   </i>
                   <h3 class="card-title">Corporis voluptates sit</h3>
                   <span class="card-text">
@@ -116,26 +128,29 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-lg-sm-12 mb-md-4">
-              <div class="card border-0">
-                <div class="card-body" id="three-card">
-                  <i   class="fa-brands fa-angellist fa-2xl" style="color: #1977cc;
-                    font-size: 42px">
-                  </i>
-                  <h3 class="card-title">Ullamco laboris ladore pan</h3>
-                  <span class="card-text"
-                    >Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt</span
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-lg-sm-12">
+            <div class="col-lg-4 col-sm-12 col-md-6 my-3">
               <div class="card border-0">
                 <div class="card-body" id="three-card">
                   <i
-                    class="fa-regular fa-pen-to-square fa-2xl" style="color:
-                    #1977cc; font-size: 42px">
+                    class="fa-brands fa-angellist fa-2xl"
+                    style="color: #1977cc; font-size: 42px"
+                  >
+                  </i>
+                  <h3 class="card-title">Ullamco laboris</h3>
+                  <span class="card-text"
+                    >Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-12 col-md-6 my-3">
+              <div class="card border-0">
+                <div class="card-body" id="three-card">
+                  <i
+                    class="fa-regular fa-pen-to-square fa-2xl"
+                    style="color: #1977cc; font-size: 42px"
+                  >
                   </i>
                   <h3 class="card-title">Corporis voluptates sit</h3>
                   <span class="card-text">
@@ -152,50 +167,59 @@
 
     <!-- video -->
 
-    <div class="container mt-5" id="videopart">
-      <div class="row">
-        <div class="col-lg-5">
-          <iframe width="400" height="400" src="https://www.youtube.com/embed/FUsekJc2O1s" title="VDJ recombination | antibody class switching" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="container-fluid my-5">
+      <div class="row my-5 mx-sm-1 mx-lg-5 mx-md-5">
+        <div class="col-lg-5 col-sm-12 mt-2">
+          <iframe
+            width="95%"
+            height="400"
+            src="https://www.youtube.com/embed/FUsekJc2O1s"
+            title="VDJ recombination | antibody class switc-darkhing"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
         </div>
-        <div class="col-lg-7 fs-" id="">
-          <h1>Enim quis est voluptatibus aliquid consequatur fugiat</h1>
-          <span>
-            Esse voluptas cumque vel exercitationem. Reiciendis est hic
-            accusamus. Non ipsam et sed minima temporibus laudantium. Soluta
-            voluptate sed facere corporis dolores excepturi. Libero laboriosam
-            sint et id nulla tenetur. Suscipit aut voluptate.</span
-          >
-          <div class="row mt-4">
-            <div class="col-lg-1" id="circle">
+        <div class="col-lg-7 col-sm-12">
+          <div class="row mt-sm-4">
+            <div class="col-lg-12 col-sm-12 mb-4">
+              <h2 class="tc-dark">
+                Enim quis est voluptatibus aliquid consequatur fugiat
+              </h2>
+              <p class="my-3">
+                Esse voluptas cumque vel exercitationem. Reiciendis est hic
+                accusamus. Non ipsam et sed minima temporibus laudantium. Soluta
+                voluptate sed facere corporis dolores excepturi. Libero
+                laboriosam sint et id nulla tenetur. Suscipit aut voluptate.
+              </p>
+            </div>
+
+            <div class="col-lg-1 col-sm-2 col-md-2" id="circle">
               <i class="fa-regular fa-star fa-2xl star-icon"></i>
             </div>
-            <div class="col-lg-11 col-lg-md-6 col-lg-sm-12">
-              <h1>Lorem Lipsum</h1>
-              <span>
+            <div class="col-lg-11 col-md-6 col-sm-10 col-md-10 mb-5 mt-2">
+              <h4 class="tc-dark">Lorem Lipsum</h4>
+              <span class="tc-gray">
                 Voluptatum deleniti atque corrupti quos dolores et quas
                 molestias excepturi sint occaecati cupiditate non provident
               </span>
             </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-lg-1" id="circle">
+            <div class="col-lg-1 col-sm-2 col-md-2" id="circle">
               <i class="fa-regular fa-star fa-2xl star-icon"></i>
             </div>
-            <div class="col-lg-11">
-              <h1>Nemo Enim</h1>
-              <span>
+            <div class="col-lg-11 col-sm-10 col-md-10 mb-5 mt-2">
+              <h4 class="tc-dark">Lorem Lipsum</h4>
+              <span class="tc-gray">
                 At vero eos et accusamus et iusto odio dignissimos ducimus qui
                 blanditiis praesentium voluptatum deleniti atque
               </span>
             </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-lg-1" id="circle">
+            <div class="col-lg-1 col-sm-2 col-md-2" id="circle">
               <i class="fa-regular fa-star fa-2xl star-icon"></i>
             </div>
-            <div class="col-lg-11">
-              <h1>Dine Pad</h1>
-              <span>
+            <div class="col-lg-11 col-sm-10 col-md-10 mb-5 mt-2">
+              <h4 class="tc-dark">Lorem Lipsum</h4>
+              <span class="tc-gray">
                 Explicabo est voluptatum asperiores consequatur magnam. Et
                 veritatis odit. Sunt aut deserunt minus aut eligendi omnis
               </span>
