--- a/index.html
+++ b/index.html
@@ -11,64 +11,45 @@
   <body>
     <!-- navbar -->
 
-    <div class="container-fluid d-flex navbar">
-      <a class="navbar-brand" href="#">Medilab</a>
-      <button class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html" id="nav-home"
-            >home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html" id="nav-hover">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-hover">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-hover">Departments</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-hover">Doctors</a>
-        </li>
-        <li class="nav-item dropdown border-0">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            id="nav-hover"
-          >
-            Drop Down
-          </a>
-          <ul class="dropdown-menu border-0">
-            <li><a class="dropdown-item" href="#">Drop Down 1</a></li>
-            <li><a class="dropdown-item" href="#">Drop Down 2</a></li>
-            <li><a class="dropdown-item" href="#">Drop Down 3</a></li>
-            <li><a class="dropdown-item" href="#">Drop Down 4</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="nav-hover">Contact</a>
-        </li>
+    
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <div class="d-lg-flex">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+         
+        </ul>
         <button class="btn rounded-pill px-4" id="menu-button">
           Make an Appointment
         </button>
-      </ul>
+        </div>
     </div>
-   
+  </div>
+</nav>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+
