--- a/index.html
+++ b/index.html
@@ -229,6 +229,272 @@
       </div>
     </div>
 
+    <!-- number of staff -->
+
+    <div class="container-fluid staff py-5">
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-3">
+            <div class="icon-center">
+              <div class="icon-border">
+                <i
+                  class="fa-solid fa-user-doctor fa-2xl"
+                  style="color: #ffffff"
+                >
+                </i>
+              </div>
+              <div class="counting">85</div>
+              <span>Doctors</span>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="icon-center">
+              <div class="icon-border">
+                <i
+                  class="fa-solid fa-hospital fa-xl"
+                  style="color: #ffffff"
+                ></i>
+              </div>
+              <div class="counting">18</div>
+              <span>Departments</span>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="icon-center">
+              <div class="icon-border">
+                <i class="fa-solid fa-flask fa-xl" style="color: #ffffff"></i>
+              </div>
+              <div class="counting">12</div>
+              <span>Research Labs</span>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="icon-center">
+              <div class="icon-border">
+                <i class="fa-solid fa-award fa-xl" style="color: #ffffff"></i>
+              </div>
+              <div class="counting">150</div>
+              <span>Awards</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- services -->
+
+    <div class="container py-5" href="service.html">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center mb-2">
+          <h1 class="tc-dark">Services</h1>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+          <div class="custom-hr">
+            <div class="hr-2"></div>
+          </div>
+        </div>
+        <div class="col-12 d-flex justify-content-center my-4 text-center">
+          <p>
+            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+            aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+            quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+            fugiat sit in iste officiis commodi quidem hic quas.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row row-cols-2 g-4">
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i
+              class="fa-solid fa-heart-pulse fa-2xl"
+              style="color: #ffffff"
+            ></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">Lorem Lipsum</h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >Voluptatum deleniti atque corrupti quos dolores et quas molestias
+            excepturi</span
+          >
+        </div>
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i class="fa-solid fa-capsules fa-2xl" style="color: #ffffff"></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">
+            Sed ut perspiciatis
+          </h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore
+          </span>
+        </div>
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i
+              class="fa-solid fa-hospital-user fa-2xl"
+              style="color: #ffffff"
+            ></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">Magni Dolores</h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia
+          </span>
+        </div>
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i
+              class="fa-regular fa-hourglass-half fa-2xl"
+              style="color: #ffffff"
+            ></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">Nemo Enim</h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis
+          </span>
+        </div>
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i class="fa-solid fa-bicycle fa-2xl" style="color: #ffffff"></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">Dele cardo</h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >Quis consequatur saepe eligendi voluptatem consequatur dolor
+            consequuntur
+          </span>
+        </div>
+        <div class="col-4 service-box px-3 py-4">
+          <div
+            class="service-icon d-flex align-items-center justify-content-center mt-5 mb-3"
+          >
+            <i class="fa-solid fa-plus-minus fa-2xl" style="color: #ffffff"></i>
+          </div>
+          <h2 class="d-flex justify-content-center mb-3">Divera don</h2>
+          <span class="d-flex justify-content-center text-center mb-5"
+            >Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit
+            aspernatur
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <!-- appointment -->
+
+    <div class="container-fluid my-5 appoint">
+      <div class="container py-5">
+        <div class="d-flex justify-content-center mb-2">
+          <h1 class="tc-dark">Make an Appointment</h1>
+        </div>
+        <div class="d-flex justify-content-center">
+          <div class="custom-hr">
+            <div class="hr-2"></div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center my-4 text-center">
+          <p>
+            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+            aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+            quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+            fugiat sit in iste officiis commodi quidem hic quas.
+          </p>
+        </div>
+        <div class="row g-4">
+          <div class="col-4">
+            <input
+              type="text"
+              class="input-width p-2"
+              placeholder="Your Name"
+            />
+          </div>
+          <div class="col-4">
+            <input
+              type="text"
+              class="input-width p-2"
+              placeholder="Your Email"
+            />
+          </div>
+          <div class="col-4">
+            <input
+              type="text"
+              class="input-width p-2"
+              placeholder="Your Phone"
+            />
+          </div>
+          <div class="col-4">
+            <input
+              type="text"
+              class="input-width p-2"
+              placeholder="Appointment Date"
+            />
+          </div>
+          <div class="col-4">
+            <select class="input-width p-2">
+              <option value="volvo">Select Department</option>
+              <option value="saab">Department 1</option>
+              <option value="mercedes">Department 2</option>
+              <option value="audi">Department 3</option>
+            </select>
+          </div>
+          <div class="col-4">
+            <select class="input-width p-2">
+              <option value="volvo">Select Doctor</option>
+              <option value="saab">Doctor 1</option>
+              <option value="mercedes">Doctor 2</option>
+              <option value="audi">Doctor 3</option>
+            </select>
+          </div>
+          <div class="col-12">
+            <textarea
+              type="textarea"
+              class="input-width p-2"
+              rows="4"
+              placeholder="Message (Optional)"
+            ></textarea>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-2">
+          <button
+            class="border-0 rounded-pill d-flex justify-content-center py-2 px-5 mt-4"
+            style="background: #1977cc; color: white"
+          >
+            Make an Appointment
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex justify-content-center mb-2">
+        <h1 class="tc-dark">Departments</h1>
+      </div>
+      <div class="d-flex justify-content-center">
+        <div class="custom-hr">
+          <div class="hr-2"></div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center my-4 text-center">
+        <p>
+          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+          aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+          quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+          fugiat sit in iste officiis commodi quidem hic quas.
+        </p>
+      </div>
+    </div>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
