--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     ></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <!-- navbar -->
@@ -794,6 +799,153 @@
 
     <!-- testimonial start -->
 
+    <div class="container">
+      <!-- Swiper -->
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">Saul Goodman</h5>
+              <span class="">Ceo & Founder</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga emrewv bdr aliqu quidem .</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">Sara Wilson</h5>
+              <span class="">Designer</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga bdr xdfs aliquid culpa.</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">Jena Karlis</h5>
+              <span class="">Store owner</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga emrewv bdr aliqu quidem .</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">Matt Bardon</h5>
+              <span class="">freelancer</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga emrewv bdr aliqu quidem .</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">John Larson</h5>
+              <span class="">Enterprenaur</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga emrewv bdr aliqu quidem .</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="testimonial p-5">
+              <h5 class="fw-bold">Soul Goodman</h5>
+              <span class="">Ceo & founder</span>
+              <br />
+              <p class="mt-2">
+                <i
+                  class="fa-solid fa-quote-left fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+                <i
+                  >Lorem ipsum dolor sit, amet consectetur adipisicing elit. sit
+                  Expedita ratione quam nostrum velit fugiat debitis nisi ullam
+                  quidem aliquid, voluptatum, fuga emrewv bdr aliqu quidem .</i
+                >
+
+                <i
+                  class="fa-solid fa-quote-right fa-lg"
+                  style="color: #9dbffb"
+                ></i>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+
     <!-- testimonial end -->
     <!-- gallery -->
     <div class="container my-5 py-5">
@@ -1049,19 +1201,54 @@
     </div>
     <!-- headers 2 -->
 
-    <div class="container-fluid header-end py-5">
-      <div class="container">
-        <span
-          >© Copyright <span class="fw-bold">Medilab. </span> All Rights
-          Reserved <br />
-          Designed by BootstrapMade
-        </span>
-        <div class="d-flex social-icon justify-content-center">
-          <i class="fa-brands fa-twitter fa-xl" style="color: #ffffff"></i>
+    <div class="container-fluid header-end py-4">
+      <div class="container d-flex">
+        <div class="me-auto">
+          <span
+            >© Copyright <span class="fw-bold">Medilab. </span> All Rights
+            Reserved <br />
+            Designed by Kapil Kumar
+          </span>
+        </div>
+
+        <div class="social-icon">
+          <a href="#">
+            <i class="fa-brands fa-twitter fa-xl"></i>
+          </a>
+        </div>
+        <div class="social-icon">
+          <a href="#">
+            <i class="fa-brands fa-facebook-f fa-xl"></i>
+          </a>
+        </div>
+        <div class="social-icon">
+          <a href="#">
+            <i class="fa-brands fa-instagram fa-xl"></i>
+          </a>
+        </div>
+        <div class="social-icon">
+          <a href="#">
+            <i class="fa-brands fa-linkedin-in fa-xl"></i>
+          </a>
         </div>
       </div>
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 2,
+        spaceBetween: 80,
+        freeMode: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+      });
+    </script>
   </body>
 </html>
